# teleop_system

./: .gitignore  =2.1.1  CHANGE_LOG.md  CLAUDE.md  Dockerfile  MUJOCO_LOG.TXT  PRD.md  TRD.md  Tasks.md  package.xml  requirements.txt  setup.cfg  setup.py  sweep.json
config/: default.yaml
docs/: TRD.md  debugging_log.md  develop_plan.md  develop_summary.md  developer_guide.md  hw_configuration_memo.md  mocap_plan.md  user_guide.md
launch/: arm_only.launch.py  hand_only.launch.py  master_mocap.launch.py  master_sim.launch.py  mocap_replay.launch.py  slave_mujoco.launch.py  teleop_full.launch.py  teleop_mujoco_bridge.launch.py  teleop_sim.launch.py  teleop_sim_full.launch.py
scripts/: demo_mujoco_viewer.py  demo_pointcloud_viewer.py  demo_rgbd_streaming.py  demo_teleop_sim.py  download_cmu_bvh.py  launch_all.py  launch_master.py  launch_master_mocap.py  launch_slave.py  run_mocap_replay.py  run_mujoco_bridge.py  run_parameter_sweep.py  run_teleop.py  test_arm_teleop_standalone.py  test_camera_streaming.py  test_camera_teleop_standalone.py  test_hand_teleop_standalone.py  test_locomotion_standalone.py  verify_first_person_view.py  verify_pointcloud_pipeline.py
tests/: test_arm_teleop.py  test_bvh_loader.py  test_bvh_tracker_adapter.py  test_calibration.py  test_config.py  test_interfaces.py  test_metrics.py  test_phase3_multichain.py  test_phase4_locomotion_hand.py  test_phase5_camera_gui.py  test_phase5_camera_head.py  test_phase6_devices.py  test_rgbd_streaming.py  test_ros2_rgbd.py  test_simulation.py  test_skeleton_mapper.py  test_transforms.py
(+98 files in other folders)
