[develop]
script_dir=$base/lib/teleop_system

[install]
install_scripts=$base/lib/teleop_system

[options]
zip_safe = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
